// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-1rsxyn3-euiPanel-grow-m-l-plain-hasShadow-euiCard-center"
>
  <div
    class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
  >
    <div
      class="euiCard__content css-jolp8x-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="css-9c2ijt-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText css-mtv1pd-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <div
      class="css-sec0wf-euiCard__footer"
    >
      <button
        class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        type="button"
      >
        <span
          class="css-cf8eum-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-195cllm-euiPanel-grow-m-l-plain-hasShadow-isClickable-euiCard-center"
>
  <div
    class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
  >
    <div
      class="euiCard__content css-jolp8x-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
        id="generated-idTitle"
      >
        <a
          aria-describedby="generated-idDescription"
          class="euiCard__titleAnchor css-t68l8w-euiCard__text-center-interactive"
          href="#"
          rel="noreferrer"
        >
          Card title
        </a>
      </p>
      <div
        class="euiText css-mtv1pd-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <div
      class="css-sec0wf-euiCard__footer"
    >
      <button
        class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        type="button"
      >
        <span
          class="css-cf8eum-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props recommended 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-e9y4bc-euiPanel-grow-m-l-plain-hasShadow-euiCard-center-hasBetaBadge"
>
  <div
    class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
  >
    <div
      class="euiCard__content css-jolp8x-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="css-9c2ijt-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText css-mtv1pd-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <span
      class="css-kh1wmc-euiCard__betaBadgeAnchor"
    >
      <span
        class="euiBetaBadge css-14aco7a-euiBetaBadge-hollow-m-baseline-euiCard__betaBadge"
        id="generated-idBetaBadge"
        title="Recommended"
      >
        Recommended
      </span>
    </span>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-1rsxyn3-euiPanel-grow-m-l-plain-hasShadow-euiCard-center"
>
  <div
    class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
  >
    <div
      class="euiCard__content css-jolp8x-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="css-9c2ijt-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText css-mtv1pd-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
  </div>
</div>
`;
